add method for testing in class Game fixed some error in PlaceCardCommand complete test class for place card command fixed reconnectPlayer test class
@SV